--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,3 +1,21 @@
-h1{
-  color:#355465;
+body{
+  color:#ff69b4;
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+}
+
+h2{
+  font-family: 'Fauna One', serif;
+  font-size: 16px;
+  color: #0000ff
+}
+
+#welcome-header{
+  border-top:1px solid #b9afaf;
+  margin-top:40px;
+  padding-top: 20px;
+}
+
+.big-paragraph{
+  color:#901b2e
 }
