--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,13 +1,50 @@
-body{
-  color:#ff69b4;
-  text-align: center;
-  font-family: 'Open Sans', sans-serif;
+@import "bootstrap.min.css";
+/*
+-------------------------------------------------------------------------
+Resets
+------------------------------------------------------------------------ */
+
+ul {
+  margin: 0;
+  padding: 0;
 }
 
+
+
+/*
+-------------------------------------------------------------------------
+Typography
+------------------------------------------------------------------------ */
 h2{
   font-family: 'Fauna One', serif;
   font-size: 16px;
   color: #0000ff
+}
+
+/*
+-------------------------------------------------------------------------
+Media
+------------------------------------------------------------------------ */
+img,
+iframe,
+video,
+svg {
+    display: block;
+    max-width: 100%;
+}
+
+/*
+-------------------------------------------------------------------------
+Navigation
+------------------------------------------------------------------------ */
+
+/*
+-------------------------------------------------------------------------
+test stuff
+------------------------------------------------------------------------ */
+
+.big-paragraph{
+  color:#901b2e
 }
 
 #welcome-header{
@@ -16,6 +53,8 @@ h2{
   padding-top: 20px;
 }
 
-.big-paragraph{
-  color:#901b2e
+body{
+  color:#ff69b4;
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
 }
