--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -86,6 +86,12 @@ img.displayed {
     margin-right: auto;
   }
 
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /*
 -------------------------------------------------------------------------
 Navigation
