--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -88,7 +88,7 @@ img.displayed {
 
 /*
 -------------------------------------------------------------------------
-Navigation
+Navigation and footer
 ------------------------------------------------------------------------ */
 nav {
   padding-top: 40px;
@@ -133,6 +133,12 @@ nav {
 #last-nav{
   border-right: none;
 }
+
+.footer-icons{
+  color: #06807F;
+  text-align: right;
+}
+
 /*
 -------------------------------------------------------------------------
 test stuff
