Linked and formatted footer

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -137,6 +137,11 @@ nav {
 .footer-icons{
   color: #06807F;
   text-align: right;
+  padding-top: 50px;
+}
+
+#copyright{
+  text-align:left;
 }
 
 /*
