Re-griding the work page

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -74,6 +74,12 @@ li{
   width: 52.25em;
 }
 
+.work-body{
+  padding-top: 40px;
+  margin: 0 auto;
+  width: 52.25em;
+}
+
 /*
 -------------------------------------------------------------------------
 Media
