Messing around with trying to do Jquery

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -80,6 +80,10 @@ li{
   width: 52.25em;
 }
 
+.resume-spacing{
+  padding-top: 20px;
+}
+
 /*
 -------------------------------------------------------------------------
 Media
