--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -74,6 +74,17 @@ li{
   list-style: none;
 }
 
+.speakers-list{
+  list-style: inherit;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: normal;
+  padding-left: 30px;
+  list-style-position: inside;
+  margin-left: auto;
+  text-indent: -15px;
+  margin: 10px;
+}
+
 .about-body{
   padding-top: 40px;
   margin: 0 auto;
@@ -88,6 +99,28 @@ li{
 
 .resume-spacing{
   padding-top: 20px;
+}
+
+.block-text{
+  font-size: 25px;
+  color: #797C7C;
+  text-align: center;
+}
+
+.contact{
+  font-family: 'Open Sans', sans-serif;
+  font-weight: normal;
+  font-size: 25px;
+  color: #06807F;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.contact-body{
+  padding-top: 20px;
+  margin: 0 auto;
+  width: 52.25em;
+  margin-left: 23.25em;
 }
 
 /*
@@ -108,6 +141,10 @@ img.displayed {
     margin-right: auto;
   }
 
+#mizzou-arena{
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
 /*
 -------------------------------------------------------------------------
 Navigation and footer
