Finished about page and styled it

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -74,6 +74,14 @@ li{
   list-style: none;
 }
 
+.about-list{
+  list-style: inherit;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: normal;
+  margin: 5px;
+  list-style: none;
+}
+
 .speakers-list{
   list-style: inherit;
   font-family: 'Open Sans', sans-serif;
