--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -93,13 +93,7 @@ li{
   margin: 10px;
 }
 
-.about-body{
-  padding-top: 40px;
-  margin: 0 auto;
-  width: 52.25em;
-}
-
-.work-body{
+.body{
   padding-top: 40px;
   margin: 0 auto;
   width: 52.25em;
@@ -129,6 +123,10 @@ li{
   margin: 0 auto;
   width: 52.25em;
   margin-left: 23.25em;
+}
+
+#hello-align{
+  margin-top: 0px;
 }
 
 /*
